maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: unclosed comment
 /* while (!estSurBiscuit()){
 ^Escaper:6: error: unclosed comment
 /* while (!estSurBiscuit()){
 ^Escaper:6: error: unclosed comment
 /* while (!estSurBiscuit()){
 ^Escaper:6: error: unclosed comment
 /* while (!estSurBiscuit()){
 ^Escaper:2: error: Missing closing brace `}' assumed here
override def run() {
^Escaper:2: error: expected start of definition
override def run() {
         ^Escaper:6: error: unclosed comment
 /* while (!estSurBiscuit()){
 ^